Remove unneccesary packages from Template
We don't need the hyperref and soul packages in the Template. Hyperref
is already in the class and soul was only needed to underline using
\ul{}.  But we can just as well use \underline{}.

--- a/Template for project description - Researcher project for experienced scientists and early career scientists.tex
+++ b/Template for project description - Researcher project for experienced scientists and early career scientists.tex
@@ -1,8 +1,5 @@
 \documentclass{nfr}
 
-\usepackage{hyperref}
-\usepackage{soul}
-
 \title{Project title}
 
 \begin{document}
@@ -114,7 +111,7 @@ methodology}
 \item
   Describe in detail the research questions and/or hypotheses.
 \item
-  Describe \ul{thoroughly} the theoretical approach and/or methodology
+  Describe \underline{thoroughly} the theoretical approach and/or methodology
   chosen to address the project objectives, research questions and/or
   hypotheses. Use a structure of work packages.
 \end{itemize}
@@ -221,7 +218,7 @@ follows:
 
 \begin{itemize}
 \item
-  The panels will assess potential for societal impact \ul{if} the
+  The panels will assess potential for societal impact \underline{if} the
   applicant has included a description of this in the project
   description
 \end{itemize}
