Update Template for project description - Researcher project for experienced scientists and early career scientists.tex
Minor spelling and grammar fixes and replacing the reference to biblatex with one to natbib in the introductory comments.

--- a/Template for project description - Researcher project for experienced scientists and early career scientists.tex
+++ b/Template for project description - Researcher project for experienced scientists and early career scientists.tex
@@ -3,7 +3,7 @@
 % The bibliography can use a 9pt font, which equates to \footnotesize. If you
 % use the biblatex or natbib packages you can do
 % '\renewcommand{\bibfont}{\footnotesize}' to achieve this. Here's an example
-% using biblatex.
+% using bibtex and natbib.
 
 \usepackage[sort&compress]{natbib}
 \citestyle{nature}
@@ -28,8 +28,8 @@
 % 
 % \textbf{A: Chapters and sections to be used}
 
-% I used omnidoc to translate the word template to tex. The formatting of the
-% appendices is therefore not great, but the contents is there.
+% I used pandoc to translate the word template to tex. The formatting of the
+% appendices are, therefore, not great, but the contents are there.
 
 \maketitle
 
