Update bibliography example
I updated the bibliography example in the "Template" file to use two
columns for the bibliography. Does this save space? I don't know, but I
tend to think so!
Update bibliography example

I updated the bibliography example in the "Template" file to use two
columns for the bibliography. Does this save space? I don't know, but I
tend to think so!

--- a/Template for project description - Researcher project for experienced scientists and early career scientists.tex
+++ b/Template for project description - Researcher project for experienced scientists and early career scientists.tex
@@ -10,6 +10,11 @@
 \bibliographystyle{veryshortnum}
 \renewcommand{\bibfont}{\footnotesize}
 
+\usepackage{multicol}
+\renewcommand{\bibpreamble}{\begin{multicols*}{2}}
+\renewcommand{\bibpostamble}{\end{multicols*}}
+
+
 \title{Project title}
 
 \begin{document}
