Add doi to the article in the example .bib file
Added a doi to Knuth (1984).

--- a/refs.bib
+++ b/refs.bib
@@ -32,7 +32,8 @@
   number={2},
   pages={97--111},
   year={1984},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  doi={10.1093/comjnl/27.2.97}
 }
 
 @inproceedings{lesk:1977,
