Move all bst files to their own directory
This should reduce clutter, and we can always refer to the directory in
the \bibilographystyle command (e.g.
\bibliographystyle{bst/veryshortnum}).

--- a/Template for project description - Researcher project for experienced scientists and early career scientists.tex
+++ b/Template for project description - Researcher project for experienced scientists and early career scientists.tex
@@ -13,7 +13,7 @@
 \renewcommand{\bibpostamble}{\end{multicols*}}
 
 \citestyle{nature}
-\bibliographystyle{veryshortnum}
+\bibliographystyle{bst/veryshortnum}
 
 
 \title{Project title}
