Making natbib a requirement of the class
This way the user has to make less choices, but a lot of the flexibility
is retained. Biblatex users will just have to replace on line of
nfr.cls.

--- a/Template for project description - Researcher project for experienced scientists and early career scientists.tex
+++ b/Template for project description - Researcher project for experienced scientists and early career scientists.tex
@@ -1,18 +1,14 @@
 \documentclass{nfr}
 
-% The bibliography can use a 9pt font, which equates to \footnotesize. If you
-% use the biblatex or natbib packages you can do
-% '\renewcommand{\bibfont}{\footnotesize}' to achieve this. Here's an example
-% using bibtex and natbib.
-
-\usepackage[sort&compress]{natbib}
-\renewcommand{\bibfont}{\footnotesize}
+% Here's an example bibliography using the numeric (Nature) style and two
+% columns for the reference list.
 
 \usepackage{multicol}
 \renewcommand{\bibpreamble}{\begin{multicols*}{2}}
 \renewcommand{\bibpostamble}{\end{multicols*}}
 
 \citestyle{nature}
+
 \bibliographystyle{bst/veryshortnum}
 
 
