Formatting of project title
Use a bit smaller font, reduce the white space around title, and centre
the title itself.

--- a/nfr.cls
+++ b/nfr.cls
@@ -9,9 +9,10 @@
 \RequirePackage[left=2cm,top=2cm,bottom=2cm,right=2cm]{geometry}
 
 \renewcommand{\maketitle}{
-   {\bfseries\huge
-   \vspace{.5cm}\@title\par
-   \vspace{.5cm}
+   {\centering\bfseries\LARGE
+   \vspace{.25cm}
+   \@title\par
+   \vspace{.25cm}
    }
 }
 
