More pdf metadata
Adding title and content creator metadata.

--- a/nfr.cls
+++ b/nfr.cls
@@ -30,17 +30,23 @@
 \renewcommand{\footrulewidth}{0pt}
 
 % Hyperlinks and TOC for PDF
-\RequirePackage{hyperref}
-\hypersetup{
-    plainpages=false,%
-    breaklinks,%
-    colorlinks,%
-    citecolor=black,%
-    filecolor=black,%
-    linkcolor=black,%
-    urlcolor=black,%
-    bookmarksopenlevel=2,%
-    pdfpagemode=UseOutlines
+\RequirePackage[
+        plainpages=false,%
+        breaklinks,%
+        colorlinks,%
+        citecolor=black,%
+        filecolor=black,%
+        linkcolor=black,%
+        urlcolor=black,%
+        bookmarksopenlevel=2,%
+        pdfpagemode=UseOutlines]{hyperref}
+\AtBeginDocument{
+    \hypersetup{
+        pdftitle={\@title},%
+        %pdfauthor={\@author},%
+	%pdfsubject={\@granttypeyear},%
+        addtopdfcreator={using nfr.cls from https://github.com/einola/NFR\_template}
+    }
 }
 
 % Environments and counters for WPs, tasks, objectives, hypotheses, and research questions
