Mention the starred commands in Gantt_chart_example.tex
Just comment on the fact that using the starred versions skips things from the Gantt chart.

--- a/Gantt_chart_example.tex
+++ b/Gantt_chart_example.tex
@@ -1,6 +1,7 @@
 \documentclass{nfr}
 
-% An example of how to use the automatic Gantt chart generation feature, assuming duration in quarters
+% An example of how to use the automatic Gantt chart generation feature, assuming duration in quarters.
+% NB: The starred versions: \workpackage*, \task*, \deliverable*, and \milestone* don't add to the Gantt chart and don't require a second argument.
 
 \usepackage{lipsum}
 
