A small bug-fix for the Gantt chart example
I needed to add a box after the last year for the unformatted chart.

--- a/Gantt_chart_example.tex
+++ b/Gantt_chart_example.tex
@@ -45,6 +45,7 @@
         ]{1}{16}
         \gantttitle{2024}{2}
         \gantttitlelist{2025,...,2027}{4}
+        \gantttitle{}{2}
         \drawgantt
         \ganttlink{task1.1}{task2.1}
         \ganttlink{milestone1.2}{task2.2}
