--- a/Gantt_chart_example.tex
+++ b/Gantt_chart_example.tex
@@ -47,10 +47,10 @@
         \gantttitlelist{2025,...,2027}{4}
         \gantttitle{2028}{2}
         \drawgantt
-        \ganttlink{task1.1}{task2.1}
-        \ganttlink{milestone1.2}{task2.2}
+        \ganttlink{task1p1}{task2p1}
+        \ganttlink{milestone1p2}{task2p2}
     \end{ganttchart}
-    \caption{A Gant chart using the default formatting. Milestones are indicated with diamonds and deliverables with stars.}
+    \caption{A Gantt chart using the default formatting.}
 \end{figure}
 
 \begin{figure}
@@ -92,10 +92,10 @@
         \gantttitlelist{2025,...,2027}{4}
         \gantttitle{2028}{2}
         \drawgantt
-        \ganttlink{task1.1}{task2.1}
-        \ganttlink{milestone1.2}{task2.2}
+        \ganttlink{task1p1}{task2p1}
+        \ganttlink{milestone1p2}{task2p2}
     \end{ganttchart}
-    \caption{A Gant chart using some fancy formatting. Milestones are indicated with diamonds and deliverables with stars.}
+    \caption{A Gantt chart using some fancy formatting. Milestones are indicated with diamonds and deliverables with stars.}
 \end{figure}
 
 
