--- a/Gantt_chart_example.tex
+++ b/Gantt_chart_example.tex
@@ -91,11 +91,11 @@
         \gantttitle{2024}{2}
         \gantttitlelist{2025,...,2027}{4}
         \gantttitle{2028}{2}
-        \drawgantt
+        \drawgantt*
         \ganttlink{task1p1}{task2p1}
         \ganttlink{milestone1p2}{task2p2}
     \end{ganttchart}
-    \caption{A Gantt chart using some fancy formatting. Milestones are indicated with diamonds and deliverables with stars.}
+    \caption{A Gantt chart using some fancy formatting and milestones and deliverables overlapping the task bars. Milestones are indicated with diamonds and deliverables with stars.}
 \end{figure}
 
 
