Update Template file with link to NFR template
Just so that someone starting from there will see the link and go to the readme.

--- a/Template for project description - Researcher project for experienced scientists and early career scientists.tex
+++ b/Template for project description - Researcher project for experienced scientists and early career scientists.tex
@@ -1,5 +1,8 @@
 \documentclass{nfr}
 
+% This LaTeX template is based on the official Word template found here: https://www.forskningsradet.no/siteassets/utlysninger/vedlegg-utlysninger/template-for-project-description-researcher-project-for-experienced-scientists-and-early-career-scientists.docx
+% See the README.md file for more information
+
 % Here's an example bibliography using the numeric (Nature) style and two
 % columns for the reference list.
 
