Some table updates for the CV
Change the first table to use \multicolumn instead of a nested tabular
environment. Also changed the name of the colour tablegray to nfrgray.

--- a/nfr.cls
+++ b/nfr.cls
@@ -57,7 +57,7 @@
 % Footer
 \RequirePackage{fancyhdr}
 \RequirePackage[table]{xcolor}
-\definecolor{tablegray}{gray}{0.96}
+\definecolor{nfrgray}{gray}{0.96}
 
 \fancyhf{} % clear all header and footer fields
 
